Form 'align-items' fix
Changed 'align-items: baseline;' to 'align-items: flex-start;'

--- a/src/css/master.scss
+++ b/src/css/master.scss
@@ -2056,7 +2056,7 @@ input[type="url"] {
 form {
   display: flex;
   flex-direction: column;
-  align-items: baseline;
+  align-items: flex-start;
   width: 100%;
   margin: 0 auto;
   padding: 2rem 1rem 0;
